--- a/charts/appflowy/templates/secret.yaml
+++ b/charts/appflowy/templates/secret.yaml
@@ -6,12 +6,16 @@ metadata:
     {{- include "appflowy.labels" . | nindent 4 }}
 type: Opaque
 data:
-  {{- with .Values.global.secret.data }}
-  {{- range $key, $value := . }}
-  {{ if $value }}
-  {{ $key }}: {{ $value | b64enc }}
-  {{- end }}
-  {{- end }}
-  {{- end }}
-  appflowyDatabaseUrl: {{ include "appflowy.appflowyDatabase.url" . | b64enc }}
-  gotrueDatabaseUrl: {{ include "appflowy.gotrueDatabase.url" . | b64enc }}
+  {{ .Values.global.secret.s3.secret.key }}: {{ .Values.global.secret.s3.secret.value | b64enc }}
+  {{ .Values.global.secret.jwt.secret.key }}: {{ .Values.global.secret.jwt.secret.value | b64enc }}
+  {{ .Values.global.secret.smtp.password.key }}: {{ .Values.global.secret.smtp.password.value | b64enc }}
+  {{ .Values.global.secret.oauth.googleClientSecret.key }}: {{ .Values.global.secret.oauth.googleClientSecret.value | b64enc }}
+  {{ .Values.global.secret.oauth.discordClientSecret.key }}: {{ .Values.global.secret.oauth.discordClientSecret.value | b64enc }}
+  {{ .Values.global.secret.oauth.githubClientSecret.key }}: {{ .Values.global.secret.oauth.githubClientSecret.value | b64enc }}
+  {{ .Values.global.secret.oauth.appleClientSecret.key }}: {{ .Values.global.secret.oauth.appleClientSecret.value | b64enc }}
+  {{ .Values.global.secret.postgres.adminPassword.key }}: {{ .Values.global.secret.postgres.adminPassword.value | b64enc }}
+  {{ .Values.global.secret.postgres.gotrue.postgresPassword.key }}: {{ .Values.global.secret.postgres.gotrue.postgresPassword.value | b64enc }}
+  {{ .Values.global.secret.postgres.appflowy.postgresPassword.key }}: {{ .Values.global.secret.postgres.appflowy.postgresPassword.value | b64enc }}
+  {{ .Values.global.secret.postgres.appflowy.databaseUrl.key }}: {{ include "appflowy.appflowyDatabase.url" . | b64enc }}
+  {{ .Values.global.secret.postgres.gotrue.databaseUrl.key }}: {{ include "appflowy.gotrueDatabase.url" . | b64enc }}
+  {{ .Values.global.secret.gotrue.adminPassword.key }}: {{ .Values.global.secret.gotrue.adminPassword.value | b64enc }}
