--- a/charts/appflowy/charts/appflowy-cloud/templates/ingress/nginx/api.yaml
+++ b/charts/appflowy/charts/appflowy-cloud/templates/ingress/nginx/api.yaml
@@ -1,18 +1,17 @@
-{{- if .Values.ingress.enabled -}}
+{{- if .Values.global.ingress.nginx.enabled -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ include "appflowy-cloud.fullname" . }}-api
   annotations:
     nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/cors-allow-origin: {{ .Values.ingress.api.cors.allowOrigin | quote }}
+    nginx.ingress.kubernetes.io/cors-allow-origin: {{ .Values.global.ingress.cors.allowOrigin | quote }}
     nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization, Accept, Client-Version"
-    nginx.ingress.kubernetes.io/cors-max-age: {{ .Values.ingress.api.cors.maxAge | quote }}
-    {{- .Values.ingress.api.annotations | toYaml | nindent 4 }}
+    nginx.ingress.kubernetes.io/cors-max-age: {{ .Values.global.ingress.cors.maxAge | quote }}
 spec:
-  ingressClassName: {{ .Values.ingress.className }}
+  ingressClassName: {{ .Values.global.ingress.nginx.className }}
   rules:
-    - host: {{ .Values.global.domain }}
+    - host: {{ .Values.global.external_host }}
       http:
         paths:
           - path: /api
