--- a/charts/appflowy/charts/appflowy-cloud/templates/ingress/nginx/ws.yaml
+++ b/charts/appflowy/charts/appflowy-cloud/templates/ingress/nginx/ws.yaml
@@ -1,16 +1,14 @@
-
-{{- if .Values.ingress.enabled -}}
+{{- if .Values.global.ingress.nginx.enabled -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ include "appflowy-cloud.fullname" . }}-ws
   annotations:
-    nginx.ingress.kubernetes.io/proxy-read-timeout: {{ .Values.ingress.ws.proxyReadTimeout | quote }}
-    {{- .Values.ingress.ws.annotations | toYaml | nindent 4 }}
+    nginx.ingress.kubernetes.io/proxy-read-timeout: {{ .Values.global.ingress.websocket.timeout | quote }}
 spec:
-  ingressClassName: {{ .Values.ingress.className }}
+  ingressClassName: {{ .Values.global.ingress.nginx.className }}
   rules:
-    - host: {{ .Values.global.domain }}
+    - host: {{ .Values.global.external_host }}
       http:
         paths:
           - path: /ws
