--- a/charts/appflowy/charts/appflowy-gotrue/templates/ingress/nginx/ingress.yaml
+++ b/charts/appflowy/charts/appflowy-gotrue/templates/ingress/nginx/ingress.yaml
@@ -1,13 +1,14 @@
-{{- if .Values.ingress.enabled -}}
+{{- if .Values.global.ingress.nginx.enabled -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ include "appflowy-gotrue.fullname" . }}
-  annotations: {{ .Values.ingress.annotations | toYaml | nindent 4 }}
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
-  ingressClassName: {{ .Values.ingress.className }}
+  ingressClassName: {{ .Values.global.ingress.nginx.className }}
   rules:
-    - host: {{ .Values.global.domain }}
+    - host: {{ .Values.global.external_host }}
       http:
         paths:
           - path: /gotrue(/|$)(.*)
