--- a/charts/appflowy/Chart.yaml
+++ b/charts/appflowy/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 name: appflowy
-description: AppFlowy Web Services
+description: AppFlowy Cloud Helm Chart
 type: application
-version: 0.1.0
+version: 0.1.1
 dependencies:
   - name: redis
     condition: redis.enabled
