--- a/charts/appflowy/templates/secret.yaml
+++ b/charts/appflowy/templates/secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.global.secret.create }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -19,3 +20,4 @@ data:
   {{ .Values.global.secret.postgres.appflowy.databaseUrl.key }}: {{ include "appflowy.appflowyDatabase.url" . | b64enc }}
   {{ .Values.global.secret.postgres.gotrue.databaseUrl.key }}: {{ include "appflowy.gotrueDatabase.url" . | b64enc }}
   {{ .Values.global.secret.gotrue.adminPassword.key }}: {{ .Values.global.secret.gotrue.adminPassword.value | b64enc }}
+{{- end }}
