fix: add default value for gotrue admin email

--- a/charts/appflowy/values.yaml
+++ b/charts/appflowy/values.yaml
@@ -177,6 +177,7 @@ appflowy-cloud:
   enabled: true
   fullnameOverride: appflowy-cloud
   gotrue:
+    adminEmail: "admin@example.com"
     baseUrl: "http://appflowy-gotrue"
   accessControl:
     enabled: true
